# radar-data

./: .gitignore  README.md  demo-client.py  demo-server.py  demo.py  deploy.sh  pyproject.toml  requirements.txt
blob/: nexrad-locations.html  nexrad-locations.json
examples/: 01 WSR-88D Locations from Web.ipynb  02 Reading Data Files.ipynb  02 Reading a Data File.ipynb  03 Viewing Product.ipynb  04 Benchmark.ipynb  data  demo-client.py  demo-server.py  get-cache-stats.py  pretty-print.py
notebooks/: 01 WSR-88D Locations from Web.ipynb  01.ipynb  02 Reading a Data File.ipynb
src/blob/: nexrad-locations.json
src/radar/: __init__.py  chart.py  common.py  cosmetics.py  dailylog.py  datashop.py  fifobuffer.py  lrucache.py  nexrad.py  overlay.py  read.py  write.py
src/radar/config/: settings.yaml
src/radar/producer/: client.py  server.py
src/radar/product/: client.py  const.py  redis-bridge.py  server.py  share.py
src/radar/service/: datashop.py  settings.yaml
tests/: test_read.py
