[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radar-data"
authors = [{name = "Boonleng Cheong", email = "boonleng@ou.edu"}]
description = "Radar Data"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["radar", "data", "weather"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version", "dependencies"]

[project.urls]
Repository = "https://github.com/ouradar/radar-data"

[project.scripts]
datashop = "radar.datashop:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"radar" = ["maps/*.json"]

[tool.setuptools.dynamic]
version = {attr = "radar.__version__"}
dependencies = {file = "requirements.txt"}
